# libgfpp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: gf++.hpp
test/: test_calc.cpp  test_dump.cpp
tools/: gftool.cpp
